--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.16",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.16",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
