--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.16",
-    "clsx": "^2.0.0",
     "framer-motion": "^10.16.16",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.1.0",
     "tailwindcss": "^3.3.6",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
